--- a/style.css
+++ b/style.css
@@ -17,7 +17,15 @@ li {
   padding: 5px;
 }
 
+li:hover {
+  background-color: rgb(172, 172, 172);
+}
+
 .selected {
+  background-color: rgb(128, 128, 128);
+}
+
+.selected:hover {
   background-color: rgb(128, 128, 128);
 }
 
